Azure devops multi-platform pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,19 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- none
+- master
+
+strategy:
+  matrix:
+    linux:
+      imageName: 'ubuntu-latest'
+    mac:
+      imageName: 'macOS-latest'
+    windows:
+      imageName: 'windows-latest'
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: $(imageName)
 
 steps:
 - task: Gradle@2
